# TsLinuxNotifications

./: CMakeLists.txt  plugin.c  plugin.h
include/: clientlib_publicdefinitions.h  public_definitions.h  public_errors.h  public_rare_definitions.h  ts3_functions.h
